--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "mcp>=0.1.1",
     "pypdf>=5.1.0",
     "fillpdf>=0.7.3",
+    "pymupdf>=1.26.7",
 ]
 
 [project.optional-dependencies]
