chore: add pre-commit pre-push gates (tests + smoke)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest"]
+dev = ["pytest", "pre-commit"]
 
 [build-system]
 requires = ["setuptools>=61"]
