--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Release gate (version + changelog)
+        env:
+          GITHUB_REF_NAME: ${{ github.ref_name }}
+        run: |
+          python scripts/check_release_ready.py
+
       - name: Create/Update GitHub Release from CHANGELOG
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
