--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-dev = ["pytest", "pre-commit"]
+dev = ["pytest", "pre-commit", "ruff"]
 
 [build-system]
 requires = ["setuptools>=61"]
@@ -23,4 +23,18 @@ build-backend = "setuptools.build_meta"
 where = ["."]
 include = ["pdf_mcp*"]
 exclude = ["PROJECT_MEMO*", "memories-and-kb*", "docs*", "scripts*", "tests*"]
+
+[tool.ruff]
+target-version = "py310"
+line-length = 120
+
+[tool.ruff.lint]
+#
+# We enforce linting incrementally:
+# - CI + pre-push run ruff on *changed files* to prevent regressions.
+# - Keep rule set small to avoid forcing repo-wide cleanup in one PR.
+select = ["F", "E9", "I"]
+
+[tool.ruff.format]
+quote-style = "double"
 
