--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pdf-mcp"
-version = "0.5.0"
+version = "0.5.1"
 description = "Local MCP server for PDF form filling, editing, and OCR text extraction"
 authors = [{ name = "Local User" }]
 requires-python = ">=3.10"
@@ -10,6 +10,7 @@ dependencies = [
     "fillpdf>=0.7.3",
     "pymupdf>=1.26.7",
     "pyhanko>=0.32.0",
+    "cryptography>=42.0.0",
 ]
 
 [project.optional-dependencies]
