--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pdf-mcp"
-version = "0.7.0"
+version = "0.8.0"
 description = "Local MCP server for PDF form filling, editing, and OCR text extraction"
 authors = [{ name = "Local User" }]
 requires-python = ">=3.10"
@@ -16,6 +16,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = ["pytest", "pre-commit", "ruff"]
 ocr = ["pytesseract>=0.3.10", "pillow>=10.0.0"]
+llm = ["openai>=1.0.0"]
 
 [build-system]
 requires = ["setuptools>=61"]
