--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pdf-mcp"
-version = "0.9.1"
+version = "0.9.2"
 description = "Local MCP server for PDF form filling, editing, and OCR text extraction"
 authors = [{ name = "Local User" }]
 requires-python = ">=3.10"
@@ -41,4 +41,9 @@ select = ["F", "E9", "I"]
 
 [tool.ruff.format]
 quote-style = "double"
+
+[tool.pytest.ini_options]
+markers = [
+    "slow: marks tests as slow (e2e tests requiring running LLM servers)",
+]
 
